// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experience renders correctly with a single item and no tags 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  margin: 3rem 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 0;
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 2rem 0;
  border-top: 1px solid #a0a0b0;
}

.c6:last-child {
  border-bottom: 1px solid #a0a0b0;
}

.c7 {
  font-size: 0.8125rem;
  margin: 0 0 0.25rem;
}

.c8 {
  font-size: 0.9375rem;
  font-weight: 700;
  margin: 0;
}

.c9 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: #ffffff;
  margin: 0 0 0.625rem;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.65;
  margin: 0 0 1rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: 200px 1fr;
    gap: 2rem;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Experience
      </p>
      <h2
        class="c4"
      >
        Where I've worked
      </h2>
      <ol
        class="c5"
      >
        <li
          class="c6"
        >
          <div
            class=""
          >
            <p
              class="c2 c7"
              variant="regular"
            >
              2021 — Present
            </p>
            <p
              class="c2 c8"
              variant="regular"
            >
              JIBE eCommerce
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c9"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c10"
              variant="regular"
            >
              Leading frontend development for headless Shopify storefronts.
            </p>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;

exports[`Experience renders correctly with all items 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c11 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  margin: 3rem 0;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2.5rem;
  font-weight: 700;
  color: #ffffff;
  line-height: 1.1;
  margin: 0 0 3rem;
  max-width: 600px;
}

.c5 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 0;
}

.c6 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 2rem 0;
  border-top: 1px solid #a0a0b0;
}

.c6:last-child {
  border-bottom: 1px solid #a0a0b0;
}

.c7 {
  font-size: 0.8125rem;
  margin: 0 0 0.25rem;
}

.c8 {
  font-size: 0.9375rem;
  font-weight: 700;
  margin: 0;
}

.c9 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  color: #ffffff;
  margin: 0 0 0.625rem;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.65;
  margin: 0 0 1rem;
}

.c12 {
  font-size: 0.75rem;
  padding: 0.25rem 0.625rem;
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: 200px 1fr;
    gap: 2rem;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Experience
      </p>
      <h2
        class="c4"
      >
        Where I've worked
      </h2>
      <ol
        class="c5"
      >
        <li
          class="c6"
        >
          <div
            class=""
          >
            <p
              class="c2 c7"
              variant="regular"
            >
              2021 — Present
            </p>
            <p
              class="c2 c8"
              variant="regular"
            >
              JIBE eCommerce
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c9"
            >
              Senior Frontend Developer & Tech Lead
            </h3>
            <p
              class="c2 c10"
              variant="regular"
            >
              Leading frontend development for headless Shopify storefronts across multiple clients. Architecting shared component libraries, design systems, and CI/CD pipelines. Clients include Petite Revery, 7mesh Industries, and Nest Designs.
            </p>
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                Next.js
              </span>
              <span
                class="c12"
              >
                TypeScript
              </span>
              <span
                class="c12"
              >
                Shopify
              </span>
              <span
                class="c12"
              >
                styled-components
              </span>
              <span
                class="c12"
              >
                Storybook
              </span>
            </div>
          </div>
        </li>
        <li
          class="c6"
        >
          <div
            class=""
          >
            <p
              class="c2 c7"
              variant="regular"
            >
              2019 — 2021
            </p>
            <p
              class="c2 c8"
              variant="regular"
            >
              RTL Nederland — Videoland
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c9"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c10"
              variant="regular"
            >
              Led the React rewrite of the Videoland streaming platform, migrating from a legacy codebase. Delivered live sports, series, and film experiences to millions of users across web and smart TV.
            </p>
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                React
              </span>
              <span
                class="c12"
              >
                TypeScript
              </span>
              <span
                class="c12"
              >
                Redux
              </span>
              <span
                class="c12"
              >
                Jest
              </span>
            </div>
          </div>
        </li>
        <li
          class="c6"
        >
          <div
            class=""
          >
            <p
              class="c2 c7"
              variant="regular"
            >
              2017 — 2019
            </p>
            <p
              class="c2 c8"
              variant="regular"
            >
              Freelance
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c9"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c10"
              variant="regular"
            >
              Delivered frontend projects for clients across ecommerce, automotive, and media. Key work includes Sprintt Ceramica and MOPAR Europe.
            </p>
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                React
              </span>
              <span
                class="c12"
              >
                JavaScript
              </span>
              <span
                class="c12"
              >
                WordPress
              </span>
            </div>
          </div>
        </li>
        <li
          class="c6"
        >
          <div
            class=""
          >
            <p
              class="c2 c7"
              variant="regular"
            >
              2013 — 2017
            </p>
            <p
              class="c2 c8"
              variant="regular"
            >
              Various agencies
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c9"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c10"
              variant="regular"
            >
              Worked at several digital agencies in Milan, building interactive campaigns, brand sites, and online games. Clients included Fiat, Chrysler, and Arfer.
            </p>
            <div
              class="c11"
            >
              <span
                class="c12"
              >
                JavaScript
              </span>
              <span
                class="c12"
              >
                HTML
              </span>
              <span
                class="c12"
              >
                CSS
              </span>
              <span
                class="c12"
              >
                jQuery
              </span>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;
